ahora el index.html tiene menos Lorem ahora el index.html tiene menos Lorem# Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="home">
             <div class="home-content">
                 <h1> Bienvenido a un mundo de posibilidades</h1>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam omnis temporibus natus reiciendis.<h3>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam omnis temporibus natus .<h3>
                 <div class="btn-box">
                     <a href="#">Contáctame</a>
                     <a href="#">Hablemos</a>
