--- a/index.html
+++ b/index.html
@@ -17,26 +17,35 @@
 
 <!---HEADER-->
 
-<body>
-    <header>
-        <nav class="navbar">
-            <a href=""><img src="images/R.png" alt=""></a>
-            <ul class="links">
-                <li><a href="index.html">INICIO</a></li>
-                <li><a href="pages/adn.html">ADN</a></li>
-                <li><a href="pages/portafolio.html">PORTAFOLIO</a></li>
-                <li><a href="pages/contacto.html">CONTACTO</a></li>
-                <li><a href="pages/blog.html">BLOG</a></li>
-            </ul>
-
-        </nav>
-
-    </header>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
     <!---INICIO DE WEB -->
 
     <section class="home">
-        <div class="home-content w-50">
+        <div class="home-content">
             <h1> Bienvenido a un mundo de posibilidades</h1>
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam omnis temporibus natus .</h3>
             <div class="btn-box">
