--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">ADN</a></li>
                             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Portafolio</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Proyecto 1</a></li>
-                                <hr class="dropdown-divider">
-                                <li><a class="dropdown-item" href="#">Proyecto 2</a></li>
-                                <li>
+                                    data-bs-toggle="dropdown" aria-expanded="false">Portafolio</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Proyecto 1</a></li>
                                     <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Proyecto 3</a></li>
-                            </ul>
-                        </li>
+                                    <li><a class="dropdown-item" href="#">Proyecto 2</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Proyecto 3</a></li>
+                                </ul>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                             <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
                         </ul>
@@ -64,7 +64,8 @@
     <section class="home">
         <div class="home-content">
             <h1> Bienvenido a un mundo de posibilidades</h1>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam omnis temporibus natusLorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam omnis temporibus natus .</h3>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam omnis temporibus natusLorem ipsum
+                dolor sit amet consectetur adipisicing elit. Tenetur nam omnis temporibus natus .</h3>
             <div class="btn-box">
                 <a href="#">Ver Más</a>
                 <a href="#">Contacto</a>
@@ -105,6 +106,59 @@
         </div>
 
     </section>
+
+<section>
+    <div class="slider">
+        <div class="slide-track">
+            <div class="slide">
+                <img src="1.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="2.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="3.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="4.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="5.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="6.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="7.png" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="1.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="2.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="3.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="4.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="5.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="6.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="7.png" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+    
+
+
 
     <!---3 TRABAJOS -->
     <section class="cards">
