--- a/pages/adn.html
+++ b/pages/adn.html
@@ -5,29 +5,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/R.png" type="image/x-icon">
 
-    <link rel="shortcut icon" href="../images/R.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+
+    <link rel="stylesheet" href="../css/style.CSS">
 </head>
 
-<body>
-    <header>
-        <nav class="navbar">
-            <a href=""><img src="/images/R.png" alt=""></a>
-            <ul class="links">
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="./adn.html">ADN</a></li>
-                <li><a href="./portafolio.html">PORTAFOLIO</a></li>
-                <li><a href="./contacto.html">CONTACTO</a></li>
-                <li><a href="./blog.html">BLOG</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
+<!---HEADER-->
 
+<body>
+
+    <head>
+        <nav class="navbar bg-body-tertiary fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="../images/r-logo.png" alt="" width="100px"> </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">¡Bienvenido!</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./adn.html">ADN</a></li>
+                            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./portafolio.html" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">Portafolio</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="./portafolio.html">Proyecto 1</a></li>
+                                    <hr class="dropdown-divider">
+                                    <li><a class="dropdown-item" href="./portafolio.html">Proyecto 2</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="./portafolio.html">Proyecto 3</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </head>
 
         </section>
 
