--- a/pages/adn.html
+++ b/pages/adn.html
@@ -20,7 +20,7 @@
 <body>
 
     <head>
-        <nav class="navbar bg-body-tertiary fixed-top">
+        <nav class="navbar bg-body-tertiary sticky-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"> <img src="../images/r-logo.png" alt="" width="100px"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -35,9 +35,10 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./adn.html">ADN</a></li>
-                            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./portafolio.html" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">Portafolio</a>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                    href="./adn.html">ADN</a></li>
+                            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./portafolio.html"
+                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">Portafolio</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./portafolio.html">Proyecto 1</a></li>
                                     <hr class="dropdown-divider">
@@ -49,7 +50,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                    href="./pages/blog">Blog</a></li>
                         </ul>
 
                     </div>
@@ -58,64 +60,64 @@
         </nav>
     </head>
 
-        </section>
+    </section>
 
-        <section class="cards">
-            <div class="card_body">
-                <img src="../images/photo-1610420389164-789fc4060fc4.jpeg" alt="">
-                <h2>Ricardo Solari</h2>
-                <h3> conoce más</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nostrum magnam, vel impedit atque
-                    nulla eligendi sunt voluptatibus, molestiae placeat harum voluptate neque nobis tempore amet eum!
-                    Itaque, corrupti esse?</p>
-            </div>
-        </section>
+    <section class="cardsADN">
+        <div class="card_bodyADN">
+            <img src="../images/photo-1610420389164-789fc4060fc4.jpeg" alt="">
+            <h2>Ricardo Solari</h2>
 
-        <section class="cajas">
-            <div class="caja c1">
-                <img src="../images/AdobeStock_99633869.jpeg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nostrum magnam, vel impedit atque
+                nulla eligendi sunt voluptatibus, molestiae placeat harum voluptate neque nobis tempore amet eum!
+                Itaque, corrupti esse?</p>
+        </div>
+    </section>
 
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, quae nulla. Voluptates
-                    repellendus quam excepturi numquam minima harum quos est.</p>
+    <section class="cajasADN">
+        <div class="caja c1ADN">
+            <img src="../images/AdobeStock_99633869.jpeg">
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, quae nulla. Voluptates
+                repellendus quam excepturi numquam minima harum quos est.</p>
 
 
-    </main>
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-columna">
-                <div class="footer-links">
-                    <h4>Conóceme </h4>
-                    <ul>
-                        <li><a href="#">ADN</a></li>
-                        <li><a href="#">ESTUDIOS</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Portafolio </h4>
-                    <ul>
-                        <li><a href="#">Dibujos</a></li>
-                        <li><a href="#">Fotografía</a></li>
-                        <li><a href="#">Programación</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>CONTACTO </h4>
-                    <ul>
-                        <li><a href="#">CV</a></li>
-                        <li><a href="#">918 282 281</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Síguenos</h4>
-                    <div class="social-links">
-                        <a href="#"><i class='bx bxl-facebook'></i></a>
-                        <a href="#"><i class='bx bxl-instagram'></i></a>
-                        <a href="#"><i class='bx bxl-twitter'></i></a>
-                        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            </main>
+            <footer class="footer">
+                <div class="container">
+                    <div class="footer-columna">
+                        <div class="footer-links">
+                            <h4>Conóceme </h4>
+                            <ul>
+                                <li><a href="#">ADN</a></li>
+                                <li><a href="#">ESTUDIOS</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-links">
+                            <h4>Portafolio </h4>
+                            <ul>
+                                <li><a href="#">Dibujos</a></li>
+                                <li><a href="#">Fotografía</a></li>
+                                <li><a href="#">Programación</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-links">
+                            <h4>CONTACTO </h4>
+                            <ul>
+                                <li><a href="#">CV</a></li>
+                                <li><a href="#">918 282 281</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-links">
+                            <h4>Síguenos</h4>
+                            <div class="social-links">
+                                <a href="#"><i class='bx bxl-facebook'></i></a>
+                                <a href="#"><i class='bx bxl-instagram'></i></a>
+                                <a href="#"><i class='bx bxl-twitter'></i></a>
+                                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-    </footer>
+            </footer>
 </body>
 
 </html>
