--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,19 +15,43 @@
 
 <body>
     
-    <header> <!-- header = encabezado  -->
-        <nav class="navbar">
-            <a href=""><img src="images/R.png" alt=""></a>
-            <ul class="links">
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="./adn.html">ADN</a></li>
-                <li><a href="./portafolio.html">PORTAFOLIO</a></li>
-                <li><a href="./contacto.html">CONTACTO</a></li>
-                <li><a href="./blog.html">BLOG</a></li>
-            </ul>
-            
-        </nav>
-    </header>
+    <nav class="navbar bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"> <img src="../images/r-logo.png" alt="" width="100px"> </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">¡Bienvenido!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="./pages/adn.html">ADN</a></li>
+                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./pages/portafolio.html"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Portafolio</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./pages/portafolio.html">Proyecto 1</a></li>
+                                <hr class="dropdown-divider">
+                                <li><a class="dropdown-item" href="./pages/portafolio.html">Proyecto 2</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./pages/portafolio.html">Proyecto 3</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="">Blog</a></li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </nav>
     <main>
         <section class="cajasblog">
             <div class="caja c4">
